# cc-viewer

./: README.md
cc-model-converter/: Cargo.toml
cc-model-converter/src/: formats.rs  gltf.rs  main.rs
cc-model-converter/src/formats/: animated_model.rs  animations.rs  camera_path.rs  chunkctd.rs  cpt.rs  ltc.rs  ltd.rs  lzss.rs  mapbin.rs  mapctd.rs  meshinstance.rs  prd.rs  tim.rs  weapbin.rs
ccviewer-godot/: .gitignore  CCCameraPath.gd  CCCameraPath.gd.uid  CCMeshInstance.gd  CCMeshInstance.gd.uid  CCRoomCamera.gd  CCRoomCamera.gd.uid  CCWalkMesh.gd  CCWalkMesh.gd.uid  TestPlayableCharacter.gd  TestPlayableCharacter.gd.uid  icon.png.import  kloofendal_48d_partly_cloudy_puresky_4k.hdr.import  load_timer.gd  load_timer.gd.uid  project.godot  splash_screenshot.png.import  ui_theme.tres  zip_explorer.tscn
patterns/includes/: cdfnd.pat  ctd.hexpat  fieldex.hexpat  ltc.hexpat  ltd.hexpat  mapbin.hexpat  mapctd.hexpat  model.hexpat  monsterbin.hexpat  pgdatbin.hexpat  prd.hexpat  prdmeshinstance.hexpat  roomlayers.hexpat  tim.hexpat  unknown_cpt.hexpat  weapon.hexpat  weapongeo.hexpat
patterns/includes/guess/: battle_data_waa_bin.hexpat
